# pharos

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  skills-lock.json
.agents/: product-marketing-context.md
apps/daemon-rs/: .gitignore  Cargo.toml
apps/daemon-rs/domain/: Cargo.toml
apps/daemon-rs/domain/src/: agent.rs  envelope.rs  error.rs  ids.rs  legacy_hook.rs  lib.rs  relationship.rs  run.rs
apps/daemon-rs/fixtures/claude/: post_tool_use_failure.json  pre_tool_use.json  session_start.json
apps/daemon-rs/fixtures/native/: claude_session.json  transcript.jsonl
apps/daemon-rs/src/: agent_identity.rs  api.rs  config.rs  connector.rs  cursor_callmcp.rs  discovery.rs  envelope.rs  lib.rs  live_state.rs  main.rs  memory_brain.rs  model.rs  replay.rs  scanner.rs  store.rs  tailer.rs
apps/daemon-rs/src/legacy/: claude.rs
apps/daemon-rs/src/live_state/: avatars.rs  constants.rs  data.rs  describe.rs  labels.rs  mod.rs  queries.rs  tests.rs  util.rs
apps/daemon-rs/src/profiles/: claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  process.rs
apps/daemon-rs/src/profiles/codex/: mod.rs  parse.rs  profile.rs  types.rs
apps/daemon-rs/src/scanner/: helpers.rs  mod.rs  ollama.rs  run.rs  session.rs  signatures.rs  tailing.rs  tests.rs
apps/daemon-rs/tests/: api_smoke.rs  claude_profile.rs  codex_profile.rs  cursor_profile.rs  embedded_config.rs  envelope.rs  gemini_profile.rs  model_normalization.rs  process_profile.rs  replay_cli.rs  runtime_matchers.rs  scanner_integration.rs  store.rs  tailer.rs
apps/daemon-rs/tests/snapshots/: model_normalization__normalizes_pre_tool_use_fixture_into_event_envelope.snap
crates/pharos-contracts/: Cargo.toml
crates/pharos-contracts/src/: lib.rs  models.rs  openapi.rs
crates/pharos-domain/: Cargo.toml
crates/pharos-domain/src/: agent.rs  error.rs  event.rs  ids.rs  lib.rs  relationship.rs  run.rs
crates/pharos-persistence/: Cargo.toml
crates/pharos-persistence/migrations/: 001_initial.sql  002_run_parent.sql  003_domain_fields.sql  004_audit_run_seq_unique.sql
crates/pharos-persistence/src/: contracts_bridge.rs  error.rs  lib.rs  migrate.rs  projections.rs  relationship.rs  repos.rs  sqlite_store.rs
docs/: README.md  architecture-how-it-works.md  architecture.md  cto-runbook.md  deployment.md  desktop-vs-daemon-web.md  documentation-versioning.md  e2e-testing.md  event-stream-ux-guide.md  frontend-api-reference.md  getting-started-daemon-web.md  getting-started-desktop.md  getting-started-remote-daemon.md  github-release-desktop-template.md  macos-desktop-release.md  memory-brain-integration.md  multi-agent-team-setup.md  mvp-observability-slice.md  positioning.md  releases.md  security-for-reviewers.md  setup-guide.md  understanding-sessions-and-events.md
schemas/: agent-graph-edge.json  agent-graph-node.json  agent-list-item.json  graph-edge-kind.json  openapi.json  relationship-graph-payload.json
scripts/: check-docs-desktop-web-parity.mjs  docs-desktop-web-parity-allowlist.json  (+1 more)
(+213 files in other folders)
