[package]
name = "pharos-daemon"
edition = "2024"
rust-version = "1.85"
version = "0.1.0"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
axum = { version = "0.8", features = ["json", "ws"] }
clap = { version = "4.5", features = ["derive"], optional = true }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sysinfo = "0.36.1"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2.0"
futures-util = "0.3"
insta = { version = "1.43", features = ["json"] }
tempfile = "3.20"
tokio-tungstenite = "0.28"
tower = "0.5"
