[package]
name = "pharos-domain"
version = "0.1.0"
edition = "2021"
description = "Pharos domain types: Agent, Run, Event — validation and errors only (no I/O, no DB)."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
