[package]
name = "pharos-persistence"
version = "0.1.0"
edition = "2021"
description = "Pharos persistence: versioned SQLite migrations and repository traits (durable store boundary)."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
pharos-contracts = { path = "../pharos-contracts" }
pharos-domain = { path = "../pharos-domain" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
